[package]
name = "editui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
constcat = "0.6.1"
crossterm = "0.29.0"
mimalloc = "0.1.47"
thiserror = "2.0.12"
windows-sys ={  version  = "0.60.2", features = [
    "Win32_Globalization",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }
